add changed geodataeai